# refactoring-workshop

./: README.md  package-lock.json  package.json  pyproject.toml
app/: Invoice.py  hotel.js  hotel.py  rooms.json  rooms.py  subscriber.py  subscriptions.json  taxes.js
app/constants/: extraFees.js  plans.js  servicesFees.js
app/models/: additional_services.py  input_data.py  stay_informations.py  subs.py
tests/: invoice.js  invoice.py  minibarFee.js  test_invoice.py
